fix logos on mobile

--- a/style.css
+++ b/style.css
@@ -129,7 +129,10 @@ section {
     }
     .logos {
         display: flex;
-        flex-direction: column;;
+        flex-direction: column;
+    }
+    .logo {
+        margin: 1rem 0;
     }
     .row {
         display: unset;
